--- a/views/components/footer.ejs
+++ b/views/components/footer.ejs
@@ -1,1 +1,9 @@
-<footer>Created by <a href="https://github.com/pray3m">@pray3m</a></footer>
+<footer style="color: black">
+  Created by :-
+  <a
+    style="color: rgb(12, 12, 206)"
+    target="_blank"
+    href="https://github.com/R3yz0n"
+    >Sagar Thapa Chhetri</a
+  >
+</footer>
