--- a/views/allProducts.ejs
+++ b/views/allProducts.ejs
@@ -1,11 +1,9 @@
-<!-- allbook.ejs -->
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bookstore - All Books</title>
+    <title>Digital Store</title>
     <style>
       /* Add your internal CSS styling here */
 
@@ -16,8 +14,8 @@
 
       body {
         font-family: Arial, sans-serif;
-        background-color: #f0f0f0;
-        text-align: center; /* Center-align the entire content */
+        background-color: rgb(216, 209, 209);
+        text-align: center;
       }
 
       h1 {
@@ -25,7 +23,8 @@
       }
 
       header h1 {
-        background-color: #007bff;
+        background-color: slateblue;
+        border-radius: 30px;
         color: #fff;
         padding: 10px 0;
         text-align: center;
@@ -39,33 +38,36 @@
         color: rgb(6, 58, 110);
       }
 
-      .book-list {
+      .product-list {
         display: flex;
         flex-wrap: wrap;
+        gap: 20px;
         justify-content: center;
       }
 
-      .book-item {
+      .product-item {
         background-color: #fff;
         border: 1px solid #ddd;
         border-radius: 5px;
-        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        box-shadow: 0 2px 4px rgba(0, 2, 0, 0.1);
         margin: 10px;
-        padding: 8px;
+        padding: 20px 40px 20px 40px;
+
         max-width: 300px;
+        display: flex;
         text-align: center;
       }
 
-      .book-image {
+      .product-image {
         max-width: 100%;
-        max-height: 300px;
+        max-height: 200px;
       }
 
-      .book-details p {
+      .product-details p {
         margin: 0;
       }
 
-      .book-actions {
+      .product-actions {
         margin-top: 10px;
         display: flex;
         justify-content: space-around;
@@ -114,40 +116,44 @@
   </head>
   <body>
     <header>
-      <h1>Premium Book Shop</h1>
+      <h1>Get your desired products</h1>
     </header>
 
-    <h1>All Books</h1>
-
-    <div class="book-list">
-      <% products.forEach(function(book) { %>
-      <div class="book-item">
+    <div class="product-list">
+      <% products.forEach(function(product) { %>
+      <div class="product-item">
         <img
-          src="<%= book.image %>"
-          alt="<%= book.title %>"
-          class="book-image"
+          src="<%= product.image %>"
+          alt="<%= product.title %>"
+          class="product-image"
         />
-        <div class="book-details">
-          <h2><%= book.title %></h2>
-          <h4><%= book.author %></h4>
-          <h4>$<%= book.price %></h4>
-          <p><%= book.description %></p>
-        </div>
-        <div class="book-actions">
-          <a href="/editBook/<%= book.id %>" class="edit-button">Edit</a>
-          <form
-            method="get"
-            action="/deleteBook/<%= book.id %>"
-            class="delete-form"
+        <div class="product-details">
+          <h2><%= product.title %></h2>
+          <h4>Vendor : <%= product.vendor %></h4>
+          <h4>Rs. <%= product.price %></h4>
+          <p><%= product.description %></p>
+
+          <div
+            style="display: flex; gap: 5px; margin-left: 5px; margin-top: 5px"
           >
-            <button type="submit" class="delete-button">Delete</button>
-          </form>
+            <a href="/editProduct/<%= product.id %>" class="edit-button"
+              >Edit</a
+            >
+
+            <form
+              method="get"
+              action="/deleteProduct/<%= product.id %>"
+              class="delete-form"
+            >
+              <button type="submit" class="delete-button">Delete</button>
+            </form>
+          </div>
         </div>
       </div>
       <% }); %>
     </div>
 
-    <a href="/addBook" class="add-button">Add New Book</a>
+    <a href="/addProduct" class="add-button">Add New Product</a>
 
     <%- include('components/footer') %>
   </body>
