--- a/views/editProduct.ejs
+++ b/views/editProduct.ejs
@@ -1,11 +1,11 @@
-<!-- editBook.ejs -->
+<!-- editProduct.ejs -->
 
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bookstore - Edit Book</title>
+    <title>- Edit Product</title>
     <style>
       /* Add your internal CSS styling here */
       body {
@@ -19,7 +19,7 @@
         text-align: center;
       }
 
-      .book-form {
+      .product-form {
         max-width: 400px;
         margin: 0 auto;
         background-color: #fff;
@@ -29,7 +29,7 @@
         padding: 20px;
       }
 
-      .book-image {
+      .product-image {
         max-width: 100%;
       }
 
@@ -72,27 +72,27 @@
     </style>
   </head>
   <body>
-    <h1>Edit Book</h1>
+    <h1>Edit Product</h1>
 
-    <div class="book-form">
-      <form method="POST" action="/editBook/<%= book.id %>">
+    <div class="product-form">
+      <form method="POST" action="/editProduct/<%= product.id %>">
         <div class="form-group">
           <label for="title">Title</label>
           <input
             type="text"
             id="title"
             name="title"
-            value="<%= book.title %>"
+            value="<%= product.title %>"
             required
           />
         </div>
         <div class="form-group">
-          <label for="author">Author</label>
+          <label for="vendor">Author</label>
           <input
             type="text"
-            id="author"
-            name="author"
-            value="<%= book.author %>"
+            id="vendor"
+            name="vendor"
+            value="<%= product.vendor %>"
             required
           />
         </div>
@@ -102,14 +102,14 @@
             type="number"
             id="price"
             name="price"
-            value="<%= book.price %>"
+            value="<%= product.price %>"
             required
           />
         </div>
         <div class="form-group">
           <label for="description">Description</label>
           <textarea id="description" name="description" rows="4" required>
-<%= book.description %></textarea
+<%= product.description %></textarea
           >
         </div>
         <div class="form-group">
@@ -118,7 +118,7 @@
             type="text"
             id="image"
             name="image"
-            value="<%= book.image %>"
+            value="<%= product.image %>"
             required
           />
         </div>
